src/kubernetes/kafka/networkpolicy-consumers.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-consumer-np
spec:
  podSelector:
    matchLabels:
      kafka-role: consumer  
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          strimzi.io/broker-role: "true"
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kafka
    ports:
    - protocol: TCP
      port: 9092
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
